2003-03-02  John Levon  <levon@movementarian.org>

	* utils/opcontrol: --separate=library should turn kernel off

2003-03-02  John Levon  <levon@movementarian.org>

	* events/Makefile.am: fix uninstall

2003-03-02  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: more re-workings prodded by aeb

2003-03-02  John Levon  <levon@movementarian.org>

	* daemon/opd_kernel.c: remove /proc/ksyms reading

2003-03-02  John Levon  <levon@movementarian.org>

	* libutil/op_fileio.c: change op_get_line to return
	  NULL on EOF. Also bump up the default allocation some.

	* dae/opd_kernel.c:
	* dae/opd_parse_proc.c:
	* daemon/opd_kernel.c:
	* libop/op_events.c: changes from the above

2003-03-02  John Levon  <levon@movementarian.org>

	* configure.in:
	* Makefile.am:
	* events/: add text files describing the CPU counters
	  and unit masks. Install them.

	* libop/op_events.h:
	* libop/op_events.c: remove the bletcherous hard coded
	  descriptions.

	* module/ia64/op_pmu.c:
	* module/x86/op_nmi.c: remove another big of validation

	* libutil/op_list.h: make C++ friendly

	* libop/op_cpu_type.h:
	* libop/op_cpu_type.c: add op_get_cpu_name()

	* libop/Makefile:
	* libop/op_events_desc.h:
	* libop/op_events_desc.cpp: removed

	* libop++/op_print_event.cpp:
	* utils/Makefile.am:
	* utils/op_help.c:
	* gui/oprof_start.h:
	* gui/oprof_start.cpp: changes from above

2003-03-01  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: tweaks

	* utils/opcontrol: scale the default event count. Please
	  test ...

2003-03-01  John Levon  <levon@movementarian.org>

	* utils/opcontrol: setup default events. Allow part-setting
	  using --setup. Fix a help text.

	* doc/oprofile.xml: changes from the above

2003-03-01  John Levon  <levon@movementarian.org>

	* libop/op_cpu_type.c: fix alpha/ev4 mis-detection

2003-03-01  John Levon  <levon@movementarian.org>

	* doc/oprofile.xml: expand intro a little, small fixes

2003-03-01  John Levon  <levon@movementarian.org>
