@@ -17,11 +17,11 @@ $(generated_mans):
 	echo ".so man1/oprofile.1" > $@
 
 oprofile.html: oprofile.xml $(STYLESHEETS)
-	$(XSLTPROC) $(XHTML_STYLESHEET) $< > $@
+	$(XSLTPROC) --stringparam version @VERSION@ $(XHTML_STYLESHEET) $< > $@
 
 # rules to generate oprofile.sf.net/doc files
 chunk: oprofile.xml $(STYLESHEETS)
-	$(XSLTPROC) $(CHUNK_XHTML_STYLESHEET) $<
+	$(XSLTPROC) --stringparam version @VERSION@ $(CHUNK_XHTML_STYLESHEET) $<
 
 clean-local:
 	$(RM) -f $(generated_mans)
@@ -33,5 +33,5 @@ uninstall-local:
 		rm -f $(CATDIR)/cat1/$$f.gz;	\
 	done
 
-EXTRA_DIST = oprofile.1 oprofile.1.in oprofile.xml xsl/xhtml-chunk.xsl xsl/xhtml-common.xsl xsl/xhtml.xsl xsl/xhtml.xsl.in srcdoc/Doxyfile srcdoc/Makefile
+EXTRA_DIST = oprofile.1 oprofile.1.in oprofile.xml xsl/xhtml-chunk.xsl.in xsl/xhtml-chunk.xsl xsl/xhtml-common.xsl xsl/xhtml.xsl xsl/xhtml.xsl.in srcdoc/Doxyfile srcdoc/Makefile
 
