@@ -1,7 +1,7 @@
 <?xml version='1.0'?>
 <xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
  version="1.0">
-<xsl:import href="/usr/share/sgml/docbook/xsl-stylesheets/xhtml/chunk.xsl"/>
+<xsl:import href="@db_xsl@/chunk.xsl"/>
 <xsl:import href="xhtml-common.xsl"/>
  
 <xsl:template name="process-chunk">
