@@ -2,7 +2,7 @@
 <xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
 xmlns:doc="http://nwalsh.com/xsl/documentation/1.0" version="1.0">
  
-<xsl:import href="@db_xsl@"/>
+<xsl:import href="@db_xsl@/docbook.xsl"/>
 <xsl:import href="xhtml-common.xsl"/>
  
 <!-- this will give you the doctype on your chunks -->
